<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="Pages">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/home"
                    android:icon="@drawable/ic_baseline_home_24"
                    android:title="@string/action_home"/>

                <item
                    android:id="@+id/schedules"
                    android:icon="@drawable/ic_baseline_schedule_24"
                    android:title="@string/action_schedules"/>
            </group>
        </menu>
    </item>

    <item android:title="@string/features">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/settings"
                    android:icon="@drawable/ic_baseline_settings_24"
                    android:title="@string/action_settings"/>

                <item
                    android:id="@+id/about"
                    android:icon="@drawable/ic_baseline_info_24"
                    android:title="@string/action_about"/>

                <item
                    android:id="@+id/exit_app"
                    android:icon="@drawable/ic_baseline_exit_to_app_24"
                    android:title="@string/action_exit_app"/>
            </group>
        </menu>
    </item>
</menu>