<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <include
        android:id="@+id/bar"
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/search_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/bar"
        android:background="@color/orange_1"
        android:orientation="vertical"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:paddingBottom="16dp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:hint="From: "
            app:hintTextColor="@color/text_dark"
            app:startIconDrawable="@drawable/ic_baseline_train_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/from"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/orange_3"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@color/text_dark" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:hint="To: "
            app:hintTextColor="@color/text_dark"
            app:startIconDrawable="@drawable/ic_baseline_train_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/to"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/orange_3"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@color/text_dark" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/overview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/search_form"
        android:layout_marginTop="10sp"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="Train Schedule Overview"
            android:textColor="@color/text_dark"
            android:textSize="24sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10sp"
            android:layout_marginBottom="20sp"
            android:background="@color/sp_text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                app:prefixText="@string/departure_station">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/start_station"
                    android:textColor="@color/text_dark"
                    android:textSize="22sp"
                    android:textStyle="bold" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:prefixText="@string/arrival_station">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/end_station"
                    android:textColor="@color/text_dark"
                    android:textSize="22sp"
                    android:textStyle="bold" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="15sp"
            android:layout_marginBottom="20sp"
            android:background="@color/sp_text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                app:prefixText="@string/departure_time">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/start_time"
                    android:textColor="@color/text_dark"
                    android:textSize="22sp"
                    android:textStyle="bold" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:prefixText="@string/arrival_time">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/end_time"
                    android:textColor="@color/text_dark"
                    android:textSize="22sp"
                    android:textStyle="bold" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="15sp"
            android:layout_marginBottom="20sp"
            android:background="@color/sp_text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                app:prefixText="@string/total_duration">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/timing"
                    android:textColor="@color/text_dark"
                    android:textSize="22sp"
                    android:textStyle="bold" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:prefixText="@string/pricing">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/price_range"
                    android:textColor="@color/text_dark"
                    android:textSize="22sp"
                    android:textStyle="bold" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/search_btn"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/overview"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:text="@string/search_btn"
        android:textSize="18sp"
        app:icon="@drawable/ic_baseline_search_24"
        app:iconGravity="textEnd" />

    <Button
        android:id="@+id/schedule_btn"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/search_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:text="@string/view_schedule"
        android:textSize="18sp"
        app:icon="@drawable/ic_baseline_arrow_right_alt_24"
        app:iconGravity="textEnd" />

</RelativeLayout>