<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <include
        android:id="@+id/bar"
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/station_display"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/bar"
        android:background="@color/orange_1"
        android:paddingStart="5sp"
        android:paddingTop="20sp"
        android:weightSum="5"
        android:paddingEnd="5sp"
        android:paddingBottom="20sp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:src="@drawable/ic_baseline_train_34" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginStart="3sp"
            android:layout_marginEnd="6sp"
            android:background="@color/sp_text" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:prefixText="@string/departure_station"
            app:prefixTextColor="@color/sp_text">

            <TextView
                android:id="@+id/from_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_station"
                android:textSize="20sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:layout_marginEnd="15sp"
            android:src="@drawable/ic_baseline_compare_arrows_24" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:prefixText="@string/arrival_station"
            android:layout_weight="2"
            app:prefixTextColor="@color/sp_text">

            <TextView
                android:id="@+id/to_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/end_station"
                android:textSize="20sp" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/shimmer_view_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/station_display"
        android:layout_centerInParent="true">

        <androidx.cardview.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="3sp"
            android:layout_marginEnd="3sp"
            card_view:cardCornerRadius="20sp"
            card_view:cardElevation="10sp"
            card_view:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/off_white"
                android:orientation="vertical">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="250sp"
                    android:background="@color/sp_text"
                    android:layout_gravity="center_horizontal" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="35sp"
                    android:layout_marginTop="15sp"
                    android:layout_marginStart="15sp"
                    android:layout_marginEnd="15sp"
                    android:background="@color/sp_text"/>

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TableRow
                        android:layout_marginStart="20sp"
                        android:layout_marginTop="20sp"
                        android:layout_marginEnd="20sp"
                        android:layout_marginBottom="5sp"
                        android:weightSum="2">

                        <View
                            android:layout_width="wrap_content"
                            android:layout_height="17sp"
                            android:layout_weight="1"
                            android:layout_marginEnd="15sp"
                            android:background="@color/sp_text"/>

                        <View
                            android:layout_width="wrap_content"
                            android:layout_height="17sp"
                            android:layout_weight="1"
                            android:background="@color/sp_text"/>

                    </TableRow>

                    <TableRow
                        android:layout_marginStart="20sp"
                        android:layout_marginEnd="20sp"
                        android:layout_marginBottom="15sp"
                        android:weightSum="2">

                        <View
                            android:layout_width="wrap_content"
                            android:layout_height="30sp"
                            android:layout_weight="1"
                            android:layout_marginEnd="15sp"
                            android:background="@color/sp_text"/>

                        <View
                            android:layout_width="wrap_content"
                            android:layout_height="30sp"
                            android:layout_weight="1"
                            android:background="@color/sp_text"/>

                    </TableRow>

                    <TableRow
                        android:layout_marginStart="20sp"
                        android:layout_marginEnd="20sp"
                        android:layout_marginBottom="5sp"
                        android:weightSum="2">

                        <View
                            android:layout_width="wrap_content"
                            android:layout_height="17sp"
                            android:layout_weight="1"
                            android:layout_marginEnd="15sp"
                            android:background="@color/sp_text"/>

                        <View
                            android:layout_width="wrap_content"
                            android:layout_height="17sp"
                            android:layout_weight="1"
                            android:background="@color/sp_text"/>

                    </TableRow>

                    <TableRow
                        android:layout_marginStart="20sp"
                        android:layout_marginEnd="20sp"
                        android:layout_marginBottom="15sp"
                        android:weightSum="2">

                        <View
                            android:layout_width="wrap_content"
                            android:layout_height="30sp"
                            android:layout_weight="1"
                            android:layout_marginEnd="15sp"
                            android:background="@color/sp_text"/>

                        <View
                            android:layout_width="wrap_content"
                            android:layout_height="30sp"
                            android:layout_weight="1"
                            android:background="@color/sp_text"/>

                    </TableRow>

                    <TableRow
                        android:layout_marginStart="20sp"
                        android:layout_marginEnd="20sp"
                        android:layout_marginBottom="5sp"
                        android:weightSum="2">

                        <View
                            android:layout_width="wrap_content"
                            android:layout_height="17sp"
                            android:layout_weight="1"
                            android:layout_marginEnd="15sp"
                            android:background="@color/sp_text"/>

                        <View
                            android:layout_width="wrap_content"
                            android:layout_height="17sp"
                            android:layout_weight="1"
                            android:background="@color/sp_text"/>

                    </TableRow>

                    <TableRow
                        android:layout_marginStart="20sp"
                        android:layout_marginEnd="20sp"
                        android:layout_marginBottom="15sp"
                        android:weightSum="2">

                        <View
                            android:layout_width="wrap_content"
                            android:layout_height="30sp"
                            android:layout_weight="1"
                            android:layout_marginEnd="15sp"
                            android:background="@color/sp_text"/>

                        <View
                            android:layout_width="wrap_content"
                            android:layout_height="30sp"
                            android:layout_weight="1"
                            android:background="@color/sp_text"/>

                    </TableRow>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginBottom="5sp"
                        android:background="@color/sp_text" />

                    <View
                        android:layout_width="15sp"
                        android:layout_height="17sp"
                        android:layout_marginEnd="125sp"
                        android:layout_marginStart="125sp"
                        android:layout_marginBottom="3sp"
                        android:gravity="center_horizontal"
                        android:background="@color/sp_text"/>

                    <TableRow
                        android:layout_marginStart="20sp"
                        android:layout_marginEnd="20sp"
                        android:layout_marginBottom="5sp"
                        android:weightSum="3">

                        <View
                            android:layout_width="wrap_content"
                            android:layout_height="17sp"
                            android:layout_weight="1"
                            android:layout_marginEnd="15sp"
                            android:background="@color/sp_text"/>

                        <View
                            android:layout_width="wrap_content"
                            android:layout_height="17sp"
                            android:layout_weight="1"
                            android:layout_marginEnd="15sp"
                            android:background="@color/sp_text"/>

                        <View
                            android:layout_width="wrap_content"
                            android:layout_height="17sp"
                            android:layout_weight="1"
                            android:background="@color/sp_text"/>

                    </TableRow>

                    <TableRow
                        android:layout_marginStart="20sp"
                        android:layout_marginEnd="20sp"
                        android:layout_marginBottom="10sp"
                        android:weightSum="3">

                        <View
                            android:layout_width="wrap_content"
                            android:layout_height="30sp"
                            android:layout_weight="1"
                            android:layout_marginEnd="15sp"
                            android:background="@color/sp_text"/>

                        <View
                            android:layout_width="wrap_content"
                            android:layout_height="30sp"
                            android:layout_weight="1"
                            android:layout_marginEnd="15sp"
                            android:background="@color/sp_text"/>

                        <View
                            android:layout_width="wrap_content"
                            android:layout_height="30sp"
                            android:layout_weight="1"
                            android:background="@color/sp_text"/>

                    </TableRow>

                </TableLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </com.facebook.shimmer.ShimmerFrameLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/station_display"
        tools:listitem="@layout/item_schedule" />

</RelativeLayout>